# PokePricing

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt
src/poke_pricing/: poke_pricing.py
src/poke_pricing/support/: CardList.xlsx
